clusters/homelab/apps/freqtrade/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: freqtrade-tailnet
  namespace: finance
  annotations:
    homelab.rst.io/public-funnel: "false"
spec:
  hosts:
    - freqtrade.stinkyboi.com
  gateways:
    - istio-system/tailnet-gateway
  http:
    - route:
        - destination:
            host: freqtrade.finance.svc.cluster.local
            port:
              number: 8080
